# rgen3

./: Cargo.toml  README.md  poke.incl  rustfmt.toml
rgen3-save/: Cargo.toml  LICENSE
rgen3-save/examples/: fill-pc.rs  list-pokemon.rs  pokefill.rs  random-team.rs
rgen3-save/src/: lib.rs  rw.rs
rgen3-save/src/util/: lower_upper.rs
rgen3-save/tests/: identity.rs
rgen3-string/: Cargo.toml
rgen3-string/src/: lib.rs
