[package]
name = "rgen3-save"
version = "0.1.0"
authors = ["Mika Attila <radiantstatue@gmail.com>"]
license = "MIT"
repository = "https://github.com/crumblingstatue/rgen3"
description = "Manipulate Generation 3 Pokémon save files"
keywords = ["pokemon", "save"]
edition = "2024"

[dependencies]
log = "0.4"
byteorder = "1.5"

[dependencies.rgen3-string]
version = "0.1.0"
path = "../rgen3-string"

[dev-dependencies]
env_logger = "0.11"
rand = "0.9"
